--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: Testing File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}\\rmidi\\test.py",
+            "program": "${workspaceFolder}\\test.py",
             "console": "integratedTerminal"
         },
         {
