--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ deploy_staging:
     TWINE_USERNAME: $STAGING_USERNAME
     TWINE_PASSWORD: $STAGING_PASSWORD
   script:
-    - twine upload --repository-url --skip-existing $PYPRI_REPOSITORY_URL dist/* --verbose
+    - twine upload --repository-url  $PYPRI_REPOSITORY_URL --skip-existing dist/* --verbose
   except:
     - tags
 
